--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,10 @@ h6 {
 }
 
 /*--------------------------------------------------------------
+# Override some default Bootstrap stylings
+--------------------------------------------------------------*/
+
+/*--------------------------------------------------------------
 # Toast Connection
 --------------------------------------------------------------*/
 
