--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,7 +50,7 @@ h6 {
   border-radius: 4px;
   border-color: #ebeef4;
   background-color: #fff;
-  color: green;
+  color: black;
   font-size: 15px;
   line-height: 1.4;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
