--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,8 +28,42 @@ h6 {
 }
 
 /*--------------------------------------------------------------
-# Override some default Bootstrap stylings
+# Modal Turn On/Off
 --------------------------------------------------------------*/
+.container{
+  background-color: #f6f9ff;
+}
+
+ .button{
+  background-color: #4154f1;
+  width: 42px;
+  height: 21px;
+  border-radius: 25px;
+  cursor: pointer;
+}
+
+.a:before {
+  position: absolute;
+  content: '';
+  background-color: white;
+  width: 21px;
+  height: 19px;
+  border-radius: 25px;
+  margin: 1px;
+  transition: 0.2s;
+}
+
+input:checked + .a {
+  background-color: #2eca6a;
+}
+
+input:checked + .a::before {
+  transform: translateX(19px);
+}
+
+.b{
+  display: none;
+}
 
 /*--------------------------------------------------------------
 # Toast Connection
@@ -867,7 +901,7 @@ h6 {
   padding-bottom: 10px;
 }
 
-.dashboard .info-card h6 {
+.dashboard .info-card h6{
   font-size: 28px;
   color: #012970;
   font-weight: 700;
